# hr-budget-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  2296a3fa00ca_add_hierarchy_level_to_job_catalog_and_.py
backend/app/: __init__.py  config.py  database.py  db_url.py  main.py
backend/app/middleware/: audit.py  auth.py
backend/app/models/: __init__.py  audit.py  budget.py  job_catalog.py  offer.py  org_unit.py  requisition.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  budgets.py  data_exchange.py  job_catalog.py  offers.py  org_units.py  requisitions.py
backend/app/schemas/: __init__.py  audit.py  budget.py  job_catalog.py  offer.py  org_unit.py  requisition.py  user.py
backend/app/services/: auth_service.py  budget_engine.py
backend/app/utils/: security.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_budget_engine.py  test_pro_rata.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BudgetManager.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx
frontend/src/pages/: Admin.tsx  AuditLogs.tsx  Dashboard.tsx  Login.tsx  OfferGate.tsx  Requisitions.tsx
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
